# ozon-frontend-sourcing-collector

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: platform_workflows.md  repeatable_collection_workflow.md  safe_collection_policy.md
examples/: sample_visible_text.md
schemas/: collection_result.schema.json
src/ozon_frontend_sourcing_collector/: __init__.py  cli.py  collector.py  encoding.py  models.py  parsers.py  safety.py
tests/: test_cli.py  test_encoding.py  test_parsers.py  test_safety.py
