[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ozon-frontend-sourcing-collector"
version = "0.1.0"
description = "Safe public-frontend collection workflow for Ozon sourcing analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ozon AI Operations" }]
license = { text = "MIT" }
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "lxml>=5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
ozon-source-collector = "ozon_frontend_sourcing_collector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]